# MinuteFlow

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.genmate/skills/meeting-orchestrator/: SKILL.md
demo_assets/: agenda.md
docs/: architecture.md  integration.md  oss-survey.md
requirements/: diarization.txt  transcription.txt  whisperx.txt
skills/meeting-orchestrator/: SKILL.md
src/minuteflow/: __init__.py  cli.py  config.py  models.py  utils.py
src/minuteflow/mcp/: __init__.py  document_server.py  media_server.py  pipeline_server.py  transcription_server.py
src/minuteflow/providers/: openai_compatible.py
src/minuteflow/services/: documents.py  media.py  pipeline.py  transcription.py  video.py
tests/: test_cli.py  test_documents.py  test_media.py  test_pipeline_rendering.py
